--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="public/jquery/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="public/bootstrap/bootstrap-3.3.7.min.js" type="text/javascript"></script>
     <script src="socket.io/socket.io.js"></script>
-    <script src="public/rule.js" type="text/javascript"></script>
+    <script src="public/util.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
     </nav>
     <div id="divLogin" class="container-fluid" hidden>
         <div class="panel panel-default center-block">
-            <h1 class="text-center">HAPPY 斗地主</h1>
+            <h1 class="text-center">Happy 斗地主</h1>
             <form style="padding: 18px 3px;">
                 <div id="divGroupRoom" class="form-group">
                     <div class="input-group">
@@ -70,6 +70,7 @@
             <button id="btnSub" class="btn btn-success" type="button" disabled>出牌</button>
         </div>
     </footer>
+    <script src="public/rule.js" type="text/javascript"></script>
     <script type="text/javascript" src="public/client.js"></script>
 </body>
 
